--- a/senate-loy.html
+++ b/senate-loy.html
@@ -11,6 +11,11 @@
   </head>
   
   <body>
+
+    <div class="loader" id="loader">
+        <img src="./img/infinityloader.gif" alt="Loading..."/>
+    </div>
+
     <header>            
       <a href="./index.html"><img alt="TGIF Logo" src="./img/logo.png"></a>
       <ul>
@@ -121,7 +126,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="./pro-Congress-113-senate.js"></script>
     <script src="./statisticsSenateLoy.js"></script>
 
   </body>
