--- a/house-data.html
+++ b/house-data.html
@@ -70,9 +70,15 @@
       <div class="filter">
         <div>
           <p>Filter by Party:</p>
-          <input type="checkbox" name="party" value="democrats" id="demFilt"> Democrats
-          <input type="checkbox" name="party" value="republicans" id="repFilt"> Republicans
-          <input type="checkbox" name="party" value="independents" id="indFilt"> Independents
+          <label>
+            <input type="checkbox" name="party" value="democrats" id="demFilt"> Democrats
+          </label>
+          <label>
+            <input type="checkbox" name="party" value="republicans" id="repFilt"> Republicans
+          </label>
+          <label>
+            <input type="checkbox" name="party" value="independents" id="indFilt"> Independents
+          </label>
         </div>
 
         <div>
@@ -96,6 +102,11 @@
         <tbody id="house-data">
         </tbody>
       </table>
+    </div>
+    
+    <div class="flexM">
+      <div id="alertMessage" class="alertMessage">
+      </div>
     </div>
 
     <footer>
