--- a/house-att.html
+++ b/house-att.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./tgif.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./tgif.css" />
 
     <title>TGIF House Attendance Page</title>
   </head>
-    
-  <body>
 
+  <body>
     <div class="loader" id="loader">
-        <img src="./img/infinityloader.gif" alt="Loading..."/>
+      <img src="./img/infinityloader.gif" alt="Loading..." />
     </div>
 
-    <header>            
-      <a href="./index.html"><img alt="TGIF Logo" src="./img/logo.png"></a>
+    <header>
+      <a href="./index.html"><img alt="TGIF Logo" src="./img/logo.png"/></a>
       <ul>
         <li>
           <a class="mail" href="mailto:info@tgif.net">info@tgif.net</a>
@@ -32,7 +39,14 @@
             <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
               Congress 113
             </a>
             <div class="dropdown-menu">
@@ -41,7 +55,14 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
               Attendance
             </a>
             <div class="dropdown-menu">
@@ -50,7 +71,14 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
               Loyalty
             </a>
             <div class="dropdown-menu">
@@ -66,11 +94,25 @@
       <div class="flexR">
         <div class="flexC wide marginR">
           <h2>Attendance</h2>
-          <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
+          <p>
+            The Constitution specifies that a majority of members constitutes a
+            quorum to do business in each house. Representatives and senators
+            rarely force the presence of a quorum by demanding quorum calls;
+            thus, in most cases, debates continue even if a majority is not
+            present.
+          </p>
 
-          <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
+          <p>
+            The Senate uses roll-call votes; a clerk calls out the names of all
+            the senators, each senator stating "aye" or "no" when his or her
+            name is announced. The House reserves roll-call votes for the most
+            formal matters, as a roll-call of all 435 representatives takes
+            quite some time; normally, members vote by electronic device. In the
+            case of a tie, the motion in question fails. In the Senate, the Vice
+            President may (if present) cast the tiebreaking vote.
+          </p>
         </div>
-      
+
         <div class="wide marginL">
           <h2>House at a glance</h2>
           <table class="table">
@@ -81,8 +123,7 @@
                 <th>% Voted with Prty</th>
               </tr>
             </thead>
-            <tbody id="HouseAtGla">
-            </tbody>
+            <tbody id="glance"></tbody>
           </table>
         </div>
       </div>
@@ -98,8 +139,7 @@
                 <th>% Missed</th>
               </tr>
             </thead>
-            <tbody id="bottHouseAtt">
-            </tbody>
+            <tbody id="bottAtt"></tbody>
           </table>
         </div>
 
@@ -113,22 +153,34 @@
                 <th>% Missed</th>
               </tr>
             </thead>
-            <tbody id="topHouseAtt">
-            </tbody>
+            <tbody id="topAtt"></tbody>
           </table>
         </div>
       </div>
     </div>
 
     <footer>
-      <p class="card card-header center border">© 2016 TGIF | All Rights Reserved</p>
+      <p class="card card-header center border">
+        © 2016 TGIF | All Rights Reserved
+      </p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="./statisticsHouseAtt.js"></script>    
-
+    <script src="./houSenAtt.js"></script>
   </body>
 </html>
